# film-simulation-lut-learning

./: .gitignore  COMPARISON.md  Cargo.toml  MATHEMATICAL_REFERENCE.md  WORKFLOW_GUIDE.md
docs/error/: compression_options.md  generate_error_maps.md
docs/first-method/: analyze_brightness_bias.md  apply_lut.md  build_lut.md  compare_lut.md  stratified_compare_pixel.md
docs/second-method/: analyze_pipeline_bias.md  apply_pipeline.md  build_residual_lut.md  compare_pipeline.md  matrix_tone_correction.md
outputs/: lut_33.cube
outputs/second_method/: residual_lut.cube  tone_curve.csv
src/utils/: image.rs  mod.rs
